@@ -2,6 +2,13 @@
 
 * Major changes
  * Better support for Passenger (deploy receipt, asset host)
+ * Support for 'sortable' <== TODO: Document
+ * html_escape all properties by default
+ * Better support for Passenger (default deployment method now)
+ * Simplified caching (not saving cachestamp with file)
+
+* Minor changes
+ * Support for 'lang_list' when creating vhost file <== TODO: Document
 
 == 1.2.2 2012-08-30
 
